# proc_navigation

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  package.xml
.devcontainer/: devcontainer.json
.github/workflows/: docker-image-perception-develop.yml  docker-image-perception-master.yml  docker-image-robot-develop.yml  docker-image-robot-feature.yml  docker-image-robot-master.yml
bags/: 2017-06-04-21-52-57.bag  2017-06-04-21-54-45.bag
launch/: navigation.launch  proc_navigation.launch
msg/: BarometerMsg.msg
script/: ResetDepth.sh  ResetPosition.sh  quat_to_euler.py  redirect_imu_to_dvl.py  teleop_keyboard.py  tf_enu_to_ned.py  tf_ned_to_body.py
scripts/: quat_to_euler.py  redirect_imu_to_dvl.py  teleop_keyboard.py  tf_enu_to_ned.sh
scripts/device_simulator/: config_define.py  device_simulator.py  euler_math.py
src/proc_navigation/: DVLData.cc  DVLData.h  DepthMeterData.cc  DepthMeterData.h  IMUData.cc  IMUData.h  MsgPublisher.cc  MsgPublisher.h  NavigationDevice.cc  NavigationDevice.h  depth_meter_data.cc  depth_meter_data.h  dvl_data.cc  dvl_data.h  imu_data.cc  imu_data.h  main.cc  navigation_device.cc  navigation_node.cc  navigation_node.cpp  navigation_node.h  proc_navigation_node.cc  proc_navigation_node.h
src/proc_navigation/devices/: dvl_data.cc  dvl_data.h  imu_data.cc  imu_data.h  navigation_device.h
src/proc_navigation/ekf/: extended_kalman_filter.cc  extended_kalman_filter.h
